# train_game

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/: train.tiled-session
assets/levels/: level1.tmx  test.tmx
assets/levels/old/: collision.tmx  testlevel16x.tmx  train-game.tiled-session
assets/templates/: Spawner.tx  SpawnerTrigger-ellipse.tx  SpawnerTrigger-rect.tx
assets/tilesets/: tileset16x.tsx
src/: camera.rs  chaser.rs  config.rs  cursor.rs  debug.rs  debug_overlay.rs  flowfield.rs  gamepad.rs  main.rs  physics.rs  player.rs  point.rs  segment.rs  spawner.rs  tilemap.rs
